first column header alignment, fixed success message

--- a/static/css/my.css
+++ b/static/css/my.css
@@ -25,3 +25,9 @@ i.blue.icon, .ui.blue.header {
 .win {
 	font-weight: 600;
 }
+.ui.compact.table td {
+    padding: .4em .4em .4em .4em;
+}
+.ui.dropdown {
+	padding-left: .4em;
+}
